--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <!-- FACEBOOK PURPOSE -->
     <string name="facebook_application_id" translatable="false">2604788743184222</string>
     <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2604788743184222</string>
+
+    <!-- BOTTOM NAVIGATION VIEW-->
+    <string name="bottom_view_map">Map View</string>
+    <string name="bottom_view_list">List View</string>
+    <string name="bottom_view_mates">Workmates</string>
+    <string name="title_activity_maps">Map</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
