--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="title_activity_maps">Map</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+<!--    <string name="google_api_key">"AIzaSyB3o6so9QZ4VMEXE96QQx1ctsWAe7nlIGk"</string>-->
 </resources>
