Added clickListener on marker, add delay on getWebService method in maps fragment to avoid a null object exception. ListFragment now display the list of restaurants

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="call">CALL</string>
     <string name="like">LIKE</string>
     <string name="website">WEBSITE</string>
+    <string name="need_permission_message">This application needs permission to run</string>
 </resources>
