--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="website">WEBSITE</string>
     <string name="need_permission_message">This application needs permission to run</string>
     <string name="search_view">Search Restaurant</string>
+
+    <!-- CONTENT DESCRIPTION-->
+    <string name="desc_img_recyclerview"> photo restaurant</string>
 </resources>
