add favorite restaurant feature; listRestaurant : work on number of mates eating here and distance. Add filter on drawer menu's your lunch feature; Check before create a new users if he exist in firestore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,7 @@
 
     <string name="notification_disable">Careful you have disable the notifications</string>
     <string name="no_friends">no soul treads these lands! </string>
+    <string name="place_mates_eating">%s is eating at %s</string>
+    <string name="mates_not_place">%s hasn\'t decided yet</string>
 
 </resources>
